# bmstu-oop

./: .gitignore
lab_01/: CMakeLists.txt
lab_01/core/: operation_manager.cpp  operation_manager.hpp
lab_01/core/operations/: load.cpp  load.hpp  move.hpp  render.hpp  resize.cpp  resize.hpp  rotate.cpp  rotate.hpp
lab_01/core/utils/: error_codes.hpp
lab_01/models/: cube.txt
lab_01/src/: main.cpp
lab_01/src/core/: operation_manager.cpp  operation_manager.hpp
lab_01/src/ui/: Canvas.cpp  Canvas.hpp  MainWindow.cpp  MainWindow.hpp  main_window.ui
lab_01/ui/: main_window.cpp  main_window.hpp  main_window.ui
lab_02/: CMakeLists.txt
lab_03/: .$uml.drawio.bkp  CMakeLists.txt  uml.drawio
lab_03/models/: cube.txt
lab_03/src/: main.cpp
lab_03/src/builder/: BaseObjectBuilder.hpp  Director.cpp  Director.hpp  WireframeBuilder.cpp  WireframeBuilder.hpp  basebuilder.cpp  basebuilder.hpp  camerabuilder.cpp  modelbuilder.cpp
lab_03/src/commands/: Facade.hpp  ICommand.hpp  cameracommands.cpp  cameracommands.hpp  facade.hpp  objectcommands.cpp  objectcommands.hpp  rendercommands.cpp  scenecommands.cpp  scenecommands.hpp
lab_03/src/directors/: cameradirector.cpp  defaultcamdirector.cpp  iobjectdirector.hpp  modeldirector.cpp
lab_03/src/entities/: Camera.cpp  Camera.hpp  Edge.cpp  Edge.hpp  Wireframe.hpp  baseobject.cpp  baseobject.hpp  camera.cpp  camera.hpp  icameraimpl.hpp  imodelimpl.hpp  model.cpp  model.hpp  objectgroup.cpp  orthocamimpl.cpp  scene.cpp  scene.hpp
lab_03/src/io/: ireader.hpp
lab_03/src/loader/: IObjectLoader.hpp  iloader.hpp  txtfileloader.hpp
lab_03/src/managers/: cameramanager.cpp  cameramanager.hpp  datarepository.hpp  managercreator.cpp  managerprovider.hpp  objectmanager.cpp  objectmanager.hpp  rendermanager.cpp  rendermanager.hpp  scenemanager.cpp  scenemanager.hpp
lab_03/src/math/: matrix.cpp  matrix.hpp  transform.cpp  transform.hpp  vector.cpp  vector.hpp
lab_03/src/object/: Adapter.hpp  BaseObject.hpp  Camera.hpp  Composite.cpp  Composite.hpp  Vector.cpp  Wireframe.cpp
(+108 files in other folders)
